--- a/WebContent/app.css
+++ b/WebContent/app.css
@@ -52,6 +52,12 @@ background-image: -webkit-gradient(
 .map-icon {
 	background-image: url(https://cdn2.iconfinder.com/data/icons/flat-ui-icons-24-px/24/location-24-16.png) !important;
 }
+.add-icon {
+	background-image: url(https://cdn4.iconfinder.com/data/icons/wirecons-free-vector-icons/32/add-16.png) !important;
+}
+.new-icon {
+	background-image: url(https://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/doc_import.png) !important;
+}
 .refresh-icon {
 	background-image: url(https://cdn4.iconfinder.com/data/icons/pictype-free-vector-icons/16/sync-16.png) !important;
 }
@@ -61,10 +67,26 @@ background-image: -webkit-gradient(
 .delete-icon {
 	background-image: url(https://cdn1.iconfinder.com/data/icons/iconza/iconza_16x16_eb3a05/trash.png) !important;
 }
-.upload-icon {
+.open-icon {
 	//background-image: url(https://cdn3.iconfinder.com/data/icons/wpzoom-developer-icon-set/500/66-16.png) !important;
 	background-image: url(https://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/folder_open.png) !important;
 }
+.cashbag-icon {
+	background-image: url(https://cdn1.iconfinder.com/data/icons/duesseldorf/16/bank.png) !important;
+}
+.module-icon {
+	background-image: url(https://cdn1.iconfinder.com/data/icons/splashyIcons/application_windows.png) !important;
+}
+.report-icon {
+	background-image: url(https://cdn1.iconfinder.com/data/icons/6x16-free-application-icons/16/Report.png) !important;
+}
+.next-icon {
+	background-image: url(https://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/br_next.png) !important;
+}
+.prev-icon {
+	background-image: url(https://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/br_prev.png) !important;
+}
+
 #loginTarget {
 	width: 250px;
 	margin-top:20%;
