--- a/WebContent/app.css
+++ b/WebContent/app.css
@@ -55,6 +55,9 @@ background-image: -webkit-gradient(
 .add-icon {
 	background-image: url(https://cdn4.iconfinder.com/data/icons/wirecons-free-vector-icons/32/add-16.png) !important;
 }
+.remove-icon {
+	background-image: url(https://cdn0.iconfinder.com/data/icons/typicons-2/24/minus-16.png) !important;
+}
 .new-icon {
 	background-image: url(https://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/doc_import.png) !important;
 }
@@ -66,6 +69,9 @@ background-image: -webkit-gradient(
 }
 .delete-icon {
 	background-image: url(https://cdn1.iconfinder.com/data/icons/iconza/iconza_16x16_eb3a05/trash.png) !important;
+}
+.moveleft-icon {
+	background-image: url(https://cdn2.iconfinder.com/data/icons/freecns-cumulus/16/519627-127_ArrowLeft-16.png) !important;
 }
 .open-icon {
 	//background-image: url(https://cdn3.iconfinder.com/data/icons/wpzoom-developer-icon-set/500/66-16.png) !important;
